Refs #12939 !strict Changed display:none to visibility:hidden to prevent the heading collapsing
git-svn-id: http://svn.dojotoolkit.org/src/dojox/trunk@24942 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/mobile/themes/common/Heading.less
+++ b/mobile/themes/common/Heading.less
@@ -19,7 +19,7 @@
 	display: block;
 }
 .mblHeadingCenterTitle .mblHeadingSpanTitle {
-	display: none;
+	visibility: hidden;
 }
 
 /* Heading Arrow Button */
